<resources>
    <string name="app_name">Aston Intensiv Final</string>
    <string name="headlines">Headlines</string>
    <string name="saved">Saved</string>
    <string name="sour_es">Sourсes</string>
    <string name="news_app">News APP</string>
    <string name="search">Search</string>
    <string name="headline_search">Headline search</string>
    <string name="filter">Filter</string>
    <string name="headline_filter">Headline Filter</string>
    <string name="placeholder_name_news">CNN</string>
    <string name="placeholder_news">First Republic stocks drops nearly 50% after plunge in depositsdfsdfsdfgdfkkdfgkdfg kdgfkdflgdfl;gkdflkgd </string>
    <string name="image_news">image news</string>
    <string name="bage_news">Bage news</string>
    <string name="general">General</string>
    <string name="categoty_headlines">Categoty_headlines</string>
    <string name="tab_layout">tab_layout</string>
    <string name="filter_button">Filter button</string>
    <string name="search_button">Search button</string>
    <string name="sources">Sources</string>
    <string name="example_news_text">Example description News</string>
    <string name="general_usa">General | USA</string>
    <string name="queen_title">How Queen Elizabeth’s coronation helped start Matchbox cars</string>
    <string name="example_date">Mar 20, 2023 | 10:57 AM</string>
    <string name="example_source">BBC</string>
    <string name="save">Save</string>
    <string name="no_internet">No internet connection</string>
    <string name="refresh_button">refresh button</string>
    <string name="network_error_image">Network error image</string>
    <string name="refresh">Refresh</string>
    <string name="internal_error_image">Internal error image</string>
    <string name="something_went_wrong">Something went wrong\nTry later</string>
    <string name="filters">Filters</string>
    <string name="check_button">Check_button</string>
    <string name="filter_check_button">Filter check button</string>
    <string name="popular">Popular</string>
    <string name="niew">New</string>
    <string name="relevant">Relevant</string>
    <string name="date">Date</string>
    <string name="choose_date">Choose date</string>
    <string name="language">Language</string>
    <string name="today_button">Today button</string>
    <string name="russian">Русский</string>
    <string name="english">English</string>
    <string name="english_button">English button</string>
    <string name="deutsch_button">Deutsch button</string>
    <string name="russian_button">Russian button</string>
    <string name="deutsch">Deutsch</string>

</resources>