<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/filter_screen_appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/filter_screen_toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/system_prymary_color"
            app:menu="@menu/filter_menu"
            app:title="@string/filters"
            app:titleCentered="true" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/filter_screen_toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_screen_appBarLayout">

        <Button
            android:id="@+id/filter_screen_button_first"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popular"
            android:textColor="@color/text_agency"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/filter_screen_button_second"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/niew"
            android:textColor="@color/text_agency"
            android:textSize="14sp"
            android:textStyle="bold"
            app:icon="@drawable/black_check_24" />

        <Button
            android:id="@+id/filter_screen_button_third"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relevant"
            android:textColor="@color/text_agency"
            android:textSize="14sp"
            android:textStyle="bold" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/filter_screen_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/date"
        android:textColor="@color/text_agency"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_screen_toggleButton" />

    <TextView
        android:id="@+id/filter_screen_choose_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="0dp"
        android:text="@string/choose_date"
        android:textColor="@color/refresh_text"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/filter_screen_tooday_image_button"
        app:layout_constraintTop_toBottomOf="@+id/filter_screen_toggleButton" />

    <ImageButton
        android:id="@+id/filter_screen_tooday_image_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:contentDescription="@string/today_button"
        android:scaleType="centerInside"
        android:src="@drawable/today_24px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_screen_toggleButton" />

    <TextView
        android:id="@+id/filter_screen_language_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/language"
        android:textColor="@color/text_agency"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_screen_date_text_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/filter_screen_russian_button"
        android:layout_width="80dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"



        android:contentDescription="@string/russian_button"
        android:textSize="14sp"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/russian"
        android:background="@drawable/filter_button_shape"
        android:textAllCaps="false"
        android:textColor="@color/text_color"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_screen_language_text_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/filter_screen_english_button"

        android:layout_width="80dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/english"

        android:contentDescription="@string/english_button"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        android:background="@drawable/filter_button_shape"
        app:layout_constraintStart_toEndOf="@+id/filter_screen_russian_button"
        app:layout_constraintTop_toBottomOf="@+id/filter_screen_language_text_view"
         />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/filter_screen_deutsch_button"

        android:layout_width="80dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/filter_button_shape"
        android:contentDescription="@string/deutsch_button"
        android:paddingStart="2dp"

        android:paddingEnd="2dp"
        android:text="@string/deutsch"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/filter_screen_english_button"
        app:layout_constraintTop_toBottomOf="@+id/filter_screen_language_text_view" />
</androidx.constraintlayout.widget.ConstraintLayout>