<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/internal_error_appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/internal_error_toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/system_prymary_color"
            app:menu="@menu/headlines_top_bar_menu"
            app:title="@string/news_app"
            app:titleCentered="true" />
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/internal_error_image"
        android:layout_width="225dp"
        android:layout_height="173dp"
        android:scaleType="centerCrop"
        android:src="@drawable/meditating"
        android:contentDescription="@string/internal_error_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/internal_error_appBarLayout"
        app:layout_constraintVertical_bias="0.22" />

    <TextView
        android:id="@+id/internal_error_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/something_went_wrong"
        android:gravity="center"
        android:textColor="@color/text_agency"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/internal_error_image" />

    <ImageButton
        android:id="@+id/internal_error_refresh_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/refresh_button"
        android:scaleType="centerCrop"
        android:background="@null"
        android:src="@drawable/arrow_refresh_24px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/internal_error_refresh_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh"
        android:textColor="@color/refresh_text"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/internal_error_refresh_button" />

</androidx.constraintlayout.widget.ConstraintLayout>