<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/surface_recycler">

    <ImageView
        android:id="@+id/source_list_item_source_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/image_news"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/source_list_item_text_view_name_news_agency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/placeholder_name_news"
        android:textColor="@color/text_agency"
        android:textSize="16sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/source_list_item_source_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/source_list_item_text_view_description_agency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/general_usa"
        android:textColor="@color/gray_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/source_list_item_source_image"
        app:layout_constraintTop_toBottomOf="@+id/source_list_item_text_view_name_news_agency" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="37dp"
        android:background="#BFC8CC"
        app:layout_constraintTop_toBottomOf="@+id/source_list_item_source_image"
        tools:layout_editor_absoluteX="-12dp" />


</androidx.constraintlayout.widget.ConstraintLayout>